--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,29 @@
         android:theme="@style/Theme.JapaneseQuizAppVersion2"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".VerifyOTP"
             android:exported="false" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+            android:name=".Common.LoginSignup.SignUp3"
+            android:exported="false" />
+        <activity
+            android:name=".Common.LoginSignup.SignUp2"
+            android:exported="false" />
+        <activity
+            android:name=".Common.LoginSignup.SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".Common.LoginSignup.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Common.LoginSignup.StartUpActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
