--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
         android:theme="@style/Theme.JapaneseQuizAppVersion2"
         tools:targetApi="31">
         <activity
-            android:name=".VerifyOTP"
+            android:name=".Common.LoginSignup.MakeSelectionResetPass"
+            android:exported="false" />
+        <activity
+            android:name=".Common.LoginSignup.ForgetPassword"
+            android:exported="false"
+            android:label="@string/title_activity_forget_password"
+            android:theme="@style/Theme.JapaneseQuizAppVersion2.NoActionBar" />
+        <activity
+            android:name=".Common.LoginSignup.VerifyOTP"
             android:exported="false" />
         <activity
             android:name=".Common.LoginSignup.SignUp3"
