--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     //Dimen
     implementation 'com.intuit.ssp:ssp-android:1.1.0' //for text
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
