--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.JapaneseQuizAppVersion2"
         tools:targetApi="31">
         <activity
+            android:name=".MainScreen.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainScreen.StudyCategoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".Common.LoginSignup.ResetPasswordSuccessfully"
             android:exported="false" />
         <activity
