--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,9 @@ dependencies {
 
     implementation 'com.hbb20:ccp:2.7.0' //for phone number
     implementation 'io.github.chaosleung:pinview:1.4.4' //Pin Code
+
+    implementation 'com.google.mlkit:text-recognition-japanese:16.0.0-beta6'
+    implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation 'com.github.bumptech.glide:glide:4.11.0' //GIF image as background
 }
