--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,19 @@
         android:theme="@style/Theme.JapaneseQuizAppVersion2"
         tools:targetApi="31">
         <activity
+            android:name=".MainScreen.TrainingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudyScreen.HiraganaKatakanaSelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudyScreen.JapaneseHandWritingActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainScreen.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainScreen.StudyCategoryActivity"
+            android:name=".MainScreen.Nhat1Activity"
             android:exported="false" />
         <activity
             android:name=".Common.LoginSignup.ResetPasswordSuccessfully"
