--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation platform('com.google.firebase:firebase-bom:31.2.1')
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -44,8 +44,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'com.squareup.okio:okio:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
@@ -57,9 +59,10 @@ dependencies {
 
     implementation 'com.hbb20:ccp:2.7.0' //for phone number
     implementation 'io.github.chaosleung:pinview:1.4.4' //Pin Code
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.mlkit:text-recognition-japanese:16.0.0-beta6'
     implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
-    implementation 'com.github.bumptech.glide:glide:4.11.0' //GIF image as background
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
+    implementation 'androidx.browser:browser:1.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.0' //GIF image as background
 }
