--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.JapaneseQuizAppVersion2"
         tools:targetApi="31">
         <activity
+            android:name=".StudyScreen.HiraganaAlphabetActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainScreen.TrainingActivity"
             android:exported="false" />
         <activity
